[FEAT] backend configurations

--- a/mean-auth-nest-backend/.env.template
+++ b/mean-auth-nest-backend/.env.template
@@ -2,5 +2,12 @@
 
 # Si hay problemas para conectar Nestjs con Mongodb Community se puede seguir esta documentación: https://mongoosejs.com/docs/connections.html porque puede surgir un problema al tratar de conectarse con Mongo ya que no crea la colección “mean-mongo-db” (que es la que configuramos) y lo que nos aconseja es utilizar la dirección en términos de números 127.0.0.1:27017 en vez de localhost
 # Nos dice: --- Este es el mínimo necesario para conectar la base de datos myapp que se ejecuta localmente en el puerto predeterminado (27017). Para bases de datos locales MongoDB, recomendamos usar 127.0.0.1en lugar de localhost. Esto se debe a que Node.js 18 y versiones posteriores prefieren direcciones IPv6, lo que significa que, en muchas máquinas, Node.js se resolverá localhost en la dirección IPv6 ::1 y Mongoose no podrá conectarse, a menos que la instancia de mongodb se esté ejecutando con ipv6 habilitado. ---
+
+# ------------------------------------------------------------------------------------------------------------------------
+# tener en consideración que estas variables de entorno no las tenemos que configurar en el proyecto porque estas se van a desplegar cuando despleguemos la aplicación pero ahora queremos asegurarnos que en modo de desarollo se pueda conectar de una forma correcta. En modo de producción sería que creamos la aplicación y luego le decimos a la infraestructura o el servicio que va a desplegar nuestro backend que el servicio tiene que configurar las variables de entorno que en este caso sería el MONGO_URI y el JWT_SEED 
+
+# al usar Mongo Atlas entonces el colocar la cadena de conexión será similar a lo que ya tenemos, es decir, mongodb://url-base-datos+credenciales+etc/nombre-base-datos pero al utilizar Railway no es igual ya que su cadena de conexión será similar a mongodb://url-base-datos+credenciales+etc pero al levantar de nuevo el servidor en la terminal veremos que todo funciona igual
 MONGO_URI=mongodb://localhost:27017/mean-mongo-database
+MONGO_DB_NAME=auth-db
+# este JWT_SEED es una cadena de texto creada al azar
 JWT_SEED=esta_es_la_secret_key
