--- a/mean-auth-angular-frontend/.env.template
+++ b/mean-auth-angular-frontend/.env.template
@@ -1,2 +1,2 @@
 # recordar que en localhost es con http
-BASE_URL=http://localhost:3000
+BASE_URL=http://localhost:3000 # hay que cambiar por la nueva ruta dada por el backend
